--- a/wolfgang.html
+++ b/wolfgang.html
@@ -23,7 +23,7 @@
     <header>
         <div class="nav-bar">
             <div class="logo">
-                <img src="./M09-Wolf_Gang/img/logo.svg" alt="Logo of wolf Gang">
+                <a href=""><img src="./M09-Wolf_Gang/img/logo.svg" alt="Logo of wolf Gang"></a>
             </div>
             <nav>
                 <ul>
